<resources>
    <string name="app_name">AndroidTestTools</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="listTitle">Choose one to start</string>

    <!-- Detail fragment -->
    <string name="startButton">Start Testing</string>
    <string name="devicename">Name : </string>
    <string name="uuid">UUID : </string>
    <string name="address">Address : </string>
    <string name="testTimes">Test Times : </string>
    <string name="success">Success : </string>
    <string name="fail">Fail : </string>
    <string name="stoptest">Stop Testing</string>


    <!-- Main Fragment -->
    <string name="stopScanButton">Stop Scan</string>
    <string name="startScan">Start Scan</string>


    <!-- Number -->
    <string name="placeHolder">0</string>
<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
